    among others, fixes [ticket:1829] regarding declarative
    mixins

- postgresql
  - render_literal_value() is overridden which escapes
    backslashes, currently applies to the ESCAPE clause
    of LIKE and similar expressions.   
    Ultimately this will have to detect the value of 
    "standard_conforming_strings" for full behavior.  
    [ticket:1400]
  
- mysql
  - MySQL dialect doesn't emit CAST() for MySQL version 
    detected < 4.0.2.  This allows the unicode
    check on connect to proceed. [ticket:1826]

  - MySQL dialect now detects NO_BACKSLASH_ESCAPES sql
    mode, in addition to ANSI_QUOTES.  
    
  - render_literal_value() is overridden which escapes
    backslashes, currently applies to the ESCAPE clause
    of LIKE and similar expressions.   This behavior
    is derived from detecting the value of 
    NO_BACKSLASH_ESCAPES.  [ticket:1400]
    
- oracle:
  - Fixed ora-8 compatibility flags such that they
    don't cache a stale value from before the first
    database connection actually occurs. [ticket:1819]
    
- firebird
  - Fixed incorrect signature in do_execute(), error 
    introduced in 0.6.1. [ticket:1823]

  - Firebird dialect adds CHAR, VARCHAR types which
    accept a "charset" flag, to support Firebird
    "CHARACTER SET" clause.  [ticket:1813]
  
- declarative
   - a mixin class can now define a column that matches
     one which is present on a __table__ defined on a 
     subclass.  It cannot, however, define one that is 
     not present in the __table__, and the error message
     here now works.  [ticket:1821]
     
- documentation
  - Added documentation for the Inspector. [ticket:1820]

  - Fixed @memoized_property and @memoized_instancemethod
    decorators so that Sphinx documentation picks up 
    these attributes and methods, such as 
    ResultProxy.inserted_primary_key. [ticket:1830]
    
    
0.6.1
=====
- orm
  - Fixed regression introduced in 0.6.0 involving improper